# chickadee

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
res/: textures.kra
res/cube/: cube.mtl
src/: api.rs  app.rs  camera.rs  camera_controller.rs  component_storage.rs  engine.rs  error.rs  event.rs  handler.rs  lib.rs  main.rs  mod.rs  renderer.rs  resources.rs  scene.rs  shader.wgsl  texture.rs  transform.rs  types.rs  vector.rs  voxels.rs
src/collision/: README.md  aabb.rs  arena.rs  box.rs  collider.rs  mod.rs  shape.rs
src/component/: base.rs  id.rs  mod.rs  store.rs
src/engine/: app.rs  camera.rs  component.rs  engine.rs  entity.rs  error.rs  event.rs  handler.rs  mod.rs  model.rs  post_shader.wgsl  render_shader.wgsl  renderable.rs  renderer.rs  resources.rs  scene.rs  shader.wgsl  state.rs  texture.rs  transform.rs  voxels.rs
src/engine/component/: base.rs  id.rs  mod.rs
src/engine/ecs/: component.rs  component_storage.rs  entity.rs  scene.rs
src/engine/entity/: base.rs  graph.rs  mod.rs
src/engine/model/: base.rs  material.rs  mesh.rs  mod.rs  vertex.rs
src/engine/render/: render_shader.wgsl  renderer.rs
src/entity/: base.rs  graph.rs  mod.rs  transform.rs
src/model/: base.rs  material.rs  mesh.rs  mod.rs  vertex.rs
src/render/: crt.wgsl  fps_indicator.rs  main_pipeline.rs  mod.rs  post_pipeline.rs  render_shader.wgsl  renderer.rs
